--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-runtime": "^6.26.0",
+    "classnames": "^2.2.6",
     "css-loader": "^0.28.11",
     "cssnano": "^4.0.5",
     "file-loader": "^2.0.0",
